Fixed Navigation Hamburger Collapse & other cosmetics

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@
 
 #bootstrap-overrides .card-img-top {
     width: 100%;
-    height: 18vw;
+    height: 18em;
     object-fit: cover;
 }
 
@@ -127,12 +127,13 @@
 
 .fix-circle {
         width: 200px;
-        height: 260px;
+        height: 270px;
         overflow: hidden;
       }
 	  
 .img-sizing{
-        height:200px!important;
+       height:200px!important;
  }
+ 
  
  
